--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </div>
 <hr />
 <p>
-    Watch the video above to get the full knowledge on what Amazon kdp is and how you can get started. <span>THIS CAN MAJORLY BE DONE WITH YOUR SMART PHONE.</span>
+    Watch the video above to get the full knowledge on what Amazon kdp is and how you can get started. <span>THIS CAN BE DONE WITH YOUR SMART PHONE.</span>
 </p>
 <p>
     Endeavor to <a href="https://wa.link/z43qgr">chat me up</a> after you're done with the video to ask further questions or enquires.
